(+) email confirmation (without real send message - it works, but I use "console.EmailBackend" for sample).
