# django_rest_auth_email_confirm_reset/views/__init__.py
@@ -2,5 +2,6 @@ from .registration import RegistrationView
 from .login import LoginView
 from .logout import LogoutView
 from .auth_info import AuthInfoView
+from .confirmation import ConfirmationView
 
 from .swagger_expected import SwaggerExpectedView
